--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@nestjs/microservices": "^7.1.3",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.1.3",
-    "@nestjs/swagger": "^4.5.9",
+    "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
     "@nestjsx/crud": "^4.6.2",
     "@nestjsx/crud-typeorm": "^4.6.2",
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.5",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
