--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjsx/crud-typeorm": "^4.6.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "dotenv": "^8.2.0",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
